# prism-local-server

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  COMPLETION_SUMMARY.md  DEVELOPMENT.md  DIRECTORY_NAMING.md  GITHUB_RELEASE_GUIDE.md  MIGRATION_STATUS.md  PERFORMANCE_TEST.md  PROJECT_SUMMARY.md  PrismLocalServer.spec  QUICK_TEST.md  README.md  RELEASE_v3.0.0.md  TestSimple.spec  USER_GUIDE.md  build.bat  build.spec  check_and_fix_icon.py  cleanup-old-dirs.bat  cleanup-old-dirs.ps1  clear_icon_cache.bat  components.json  create_high_res_icon.py  create_icon.py  create_modern_icon.py  fix_all_colors.py  fix_all_icons.py  fix_background_color.py  fix_colors.py  fix_colors_final.py  fix_colors_v2.py  fix_homeview.py  fix_ico.py  fix_material3_colors.py  index.html  main.py  pack.bat  pack_improved.bat  package-lock.json  (+21 more)
assets/: README.md
backend/: Cargo.toml  tauri.conf.json
core/: __init__.py  config_manager.py  http_server_manager.py  port_manager.py  resource_handler.py
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_LINUX.md  BUILD_MACOS.md  CREATE_GITHUB_RELEASE.md  DEVELOPMENT.md  FINAL_VERIFICATION_REPORT.md  REQUIREMENTS_VERIFICATION.md  发布说明.md  完成总结.md  打包和测试指南.md  打包说明.md  测试报告.md  版本对比.md  部署检查清单.md  问题修复说明.md  项目总结.md  项目状态.md
frontend/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  lib.rs  models.rs
src-tauri/src/commands/: config_commands.rs
src-tauri/src/config/: manager.rs  mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/server/: handler.rs  manager.rs  mod.rs  range.rs
src-tauri/src/utils/: network.rs  port.rs
(+85 files in other folders)
