[package]
name = "prism-local-server-tauri"
version = "3.0.0"
description = "棱镜本地服务器 - 基于 Tauri v2 的高性能 HTML 静态文件部署工具"
authors = ["Kkwans"]
license = "MIT"
repository = "https://github.com/Kkwans/prism-local-server"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2.5.3"

# HTTP 服务器相关
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = "1.0"

# 工具库
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
local-ip-address = "0.6"
mime_guess = "2.0"
dirs = "5.0"
urlencoding = "2.1"
tokio-util = { version = "0.7", features = ["io"] }
git2 = "0.19"

# Release 优化配置
[profile.release]
opt-level = "z"        # 优化体积
lto = true             # 启用链接时优化
codegen-units = 1      # 单个代码生成单元，提升优化效果
strip = true           # 移除调试符号
panic = "abort"        # Panic 时直接终止，减小体积
